--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="card">
       <div class="image"><img src="./public/images/5.jfif" alt=""></div>
       <div class="cover">
-        <h2>pooki</h2>
+        <h2>pookie</h2>
           <p>price:2000</p>
           <a href="./public/videos/video.mp4">buy</a>
       </div>
